k8s-manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-booktrack-frontend
  namespace: booktrack
spec:
  type: NodePort
  selector:
    app: booktrack-frontend
  ports:
  - port: 80
    targetPort: 8080
